2009-11-11  MoriReo <mori.reo@gmail.com>

	* Sabel_Aspectから、StaticProxyを削除。

2009-11-10  Ebin <yutaka@ebine.org>

	* sabel/Functions.php: get_mime_type()関数追加。それに応じて
	Sabel_Mail_Mime_Html::addImage()のMIMEタイプを省略できるように変更。

2009-11-10  Ebin <yutaka@ebine.org>

	* generator/skeleton/en/lib/form/Object.php: toHidden()メソッド追加（フォームの
	値を全てhiddenで書き出す）

2009-11-09  Ebin <yutaka@ebine.org>

	* sabel/Functions.php: is_ipaddr()関数の正規表現を修正

2009-11-09  Hamaco  <hamanaka.kazuhiro@gmail.com>

	* Sabel.js: Sabel.Event.getTargetの返り値をSabel.Elementに変更
