@@ -1,0 +1,3 @@
+<?php
+
+class Sabel_Container_Exception_InvalidArgument extends Sabel_Exception_Runtime{}
